# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,14 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import levelsRouter from "./levels";
+import gradesRouter from "./grades";
+import booksRouter from "./books";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use(levelsRouter);
+router.use(gradesRouter);
+router.use(booksRouter);
 
 export default router;
